<resources>
    <string name="app_name">Blog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="post_title">Post Title...</string>
    <string name="post_description">Post Description</string>
    <string name="submit_text">Submit</string>
    <string name="firstName">First name</string>
    <string name="last_name">Last Name</string>
    <string name="appbar_scrolling_view_behavior">vertical</string>
    <string name="action_signout">Signout</string>
    <string name="date_created">Date created:</string>
</resources>
